--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="navigation-links">
                 <a href="#" data-text="HOME" id="home-link" >HOME</a>
                 <a href="#" data-text="ABOUT" id="about-link" >ABOUT</a>
-                <a href="#" data-text="PORTFOLIO" id="portfolio-link" >PORTFOLIO</a>
+                <!-- <a href="#" data-text="PORTFOLIO" id="portfolio-link" >PORTFOLIO</a> -->
                 <a href="#" data-text="CONTACT" id="contact-link" >CONTACT</a>
             </div>
         </div>
@@ -69,11 +69,11 @@
         <div id="header">
             <div id="particles"></div>
               <!--Social Media Links-->
-            <div class="social-media-links">
+            <!-- <div class="social-media-links">
                 <a href="https://www.linkedin.com/in/anubhab-giri-92a833104?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app "><img src="images/linkedin logo.png" class="social-media" alt="linkedin-logo"></a>
                 <a href="#"><img src="images/github-mark-white logo.png" class="social-media" alt="github-logo"></a>
 
-            </div>
+            </div> -->
             <!--Social Media Links end-->
             <div class="header-content">
                 <div class="header-content-box">
@@ -133,26 +133,27 @@
             <!--about content-->
             <div id="about-content">
                 <div class="about-header">
-                    About <span class="color">Me</span>
-                    <span class ="header-caption">Get to Know <span class="color"> us.</span></span>
+                    About <span class="color">Us</span>
+                    <!-- <span class ="header-caption">Get to Know <span class="color"> us.</span></span> -->
                 </div>
                 <div class="about-main">
             <div class="about-first-paragraph wow">
             <!--about description-->
                <span class="about-first-line">
-                    We are creative 
-                    <span class="color">web developers</span>
-                     based in Kolkata , India </span>
+                    We are a group of
+                    <span class="color">Web Developers</span>
+                     <!-- based in Kolkata , India -->
+                     </span>
                      <br>
-               <span class="about-second-line"> With 5 years of experience in a professional Web Devlopement Field, we have acquired the skills and knowledge necessary to make your project a success. we enjoy every step while working.</span>
+               <span class="about-second-line"> With a cumulative 8 years of experience in the professional web devlopement space, we have acquired the skills and knowledge necessary to make your project a success. we enjoy every step while working.</span>
                <!-- <div class="cv">
                 <a href="#"><button>Download <span class="colors">CV</span></button></a>
             </div> -->
             </div>
             <!--about picture-->
-            <div class="about-img">
+            <!-- <div class="about-img">
                 <img src="images/about.jpg" alt="Your Image">
-            </div>
+            </div> -->
             </div>
     
             </div>
@@ -201,7 +202,7 @@
                                </div>
                                <div class="service-description">
                                 <h2>Web Development</h2>
-                                <p>HyperNexTech: Expert Web Development for Impactful Digital Presence</p>
+                                <p>Expert web development for impactful digital presence</p>
                                </div>
                            </div>
                            <div class="service-two service wow">
@@ -210,7 +211,7 @@
                                </div>
                                <div class="service-description">
                                 <h2>Software Development</h2>
-                                <p>Custom Software Solutions for Your Unique Needs</p>
+                                <p>Custom software solutions for your unique needs</p>
                                </div>
                            </div>
                            <div class="service-three service wow">
@@ -219,7 +220,7 @@
                             </div>
                             <div class="service-description">
                                 <h2>App Development</h2>
-                                <p>Innovative Apps That Drive Success</p>
+                                <p>Innovative apps that drive success</p>
                             </div>
                         </div>
                     </div>
@@ -296,7 +297,7 @@
     <!--copyright-section You Can Remove After Downloading-->
             <div class="footer">
              <div class="footer-text">
-                 <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> HypernexTech
+                 <!-- <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> --> HypernexTech
              </div>
             </div>
     <!--copyright-section-->
@@ -375,7 +376,7 @@
                     <!--copyright-section You Can Remove After Downloading-->
             <div class="footer">
                 <div class="footer-text">
-                    <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> HypernexTech
+                    <!-- <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px">-->  HypernexTech 
                 </div>
                </div>
        <!--copyright-section-->
@@ -413,13 +414,13 @@
                 </div>
             </div>
             </div>
-         <div class="contact-header">Contact <span class="color"> Me</span>
-        <div class="contact-header-caption"> <span class="color"> Get</span> In Touch.</div></div>
+         <div class="contact-header">Contact <span class="color"> Us</span></div>
+        <!-- <div class="contact-header-caption"> <span class="color"> Get</span> In Touch.</div></div> -->
         <div class="contact-content">
             <!--Contact form-->
             <div class="contact-form">
                 <div class="form-header">
-                    Message Me
+                    Would love to hear from you!
                 </div>
                 <form id="myForm">
                     <div class="input-line">
@@ -475,7 +476,8 @@
                     <!--copyright-section You Can Remove After Downloading-->
                     <div class="footer">
                         <div class="footer-text">
-                            <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> HypernexTech
+                            <!-- <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px">  -->
+                            HypernexTech
                         </div>
                        </div>
                <!--copyright-section-->
